0517-0318 user쪽 security ApplicationContext로 옮김

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
 				/WEB-INF/servlet/user-servlet.xml
-				/WEB-INF/spring/spring-security.xml
+<!-- 				/WEB-INF/spring/spring-security.xml -->
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
